# fastapi-cloudauth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: pypi-upload.yml  test.yml
docs/server/: auth0.py  cognito.py  firebase.py
fastapi_auth/: __init__.py  auth0.py  base.py  cognito.py
fastapi_cloudauth/: __init__.py  auth0.py  base.py  cognito.py  firebase.py  messages.py  scope.py  verification.py
scripts/: dep.sh  develop.sh  format-imports.sh  format.sh  lint.sh  test.sh  test_local.sh
tests/: conftest.py  helpers.py  test_auth0.py  test_base.py  test_cloudauth.py  test_cognito.py  test_firebase.py  test_server.py  test_verification.py
