[tool.poetry]
name = "fastapi-cloudauth"
version = "0.3.0"
description = "fastapi-cloudauth supports simple integration between FastAPI and cloud authentication services (AWS Cognito, Auth0, Firebase Authentication)."
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/fastapi-cloudauth"

include = [
    "LICENSE",
]
keywords = ["FastAPI", "authentication", "Auth0", "AWS Cognito", "Firebase Authentication"]
classifiers = [
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = ">= 0.60.1, < 1.0"
python-jose = "^3.2.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"
isort = "^5.7.0"
uvicorn = ">=0.12.0,<0.14.0"
botocore = "^1.17.32"
boto3 = "^1.14.32"
authlib = "^0.15.2"
firebase-admin = "^4.4.0"
auth0-python = "^3.14.0"
pytest-mock = "^3.5.1"
pytest-asyncio = "^0.14.0"
autoflake = "^1.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
